# Animals_1

./: CMakeLists.txt  Lab6.docx  animal.cpp  animal.h  bird.cpp  bird.h  common_animals.cpp  common_animals.h  cont.cpp  cont.h  fish.cpp  fish.h  main.cpp  tests.cpp
googletest-master/googlemock/docs/: cheat_sheet.md  cook_book.md
googletest-master/googlemock/include/gmock/: gmock-actions.h
googletest-master/googlemock/include/gmock/internal/: gmock-internal-utils.h
googletest-master/googlemock/src/: gmock-matchers.cc
googletest-master/googletest/: README.md
googletest-master/googletest/cmake/: internal_utils.cmake
googletest-master/googletest/docs/: advanced.md
googletest-master/googletest/include/gtest/internal/: gtest-internal.h  gtest-param-util.h  gtest-port.h
googletest-master/googletest/src/: gtest-death-test.cc  gtest.cc
